refining the layout

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
   <section id="customer-feedback" class="feedback container">
     <h2>What Our Customers Say</h2>
     <div class="feedback-grid">
-
-        <div class="image-1 contact-img">
-            <img src="./assets/retail.jpeg"  />
-        </div>
+      
+      <div class="image-1 contact-img">
+          <img src="./assets/retail.jpeg"  />
+      </div>
 
       <div class="feedback-card card-1">
         <p>"Nkace Onions have consistently provided top-quality onions for my store. My business has grown thanks to their affordable prices."</p>
-        <h4>- Mary, Small Grocery Owner</h4>
+        <p class="feedbacker">- Mary, Grocery Owner</p>
       </div>
 
       <div class="image-2 contact-img">
@@ -93,7 +93,7 @@
 
       <div class="feedback-card card-2">
         <p>"Great service and amazing products. Nkace has made it easy to keep my stock fresh and my customers happy."</p>
-        <h4>- John, Grocery Supplier</h4>
+        <p class="feedbacker">- John, Grocery Supplier</p>
       </div>
       <!-- Add more feedback as needed -->
     </div>
@@ -104,8 +104,8 @@
     <h2>Contact Us</h2>
     <div class="contact-info">
       <p>Bulb Onions Nairobi</p>
-      <p>Phone: +254 712 345678</p>
-      <p>Email: info@bulbonions.co.ke</p>
+      <p>Phone: +254 115 148000</p>
+      <p>Email: info@nkaceonions.co.ke</p>
       <p>Location: Nairobi, Kenya</p>
     </div>
     <div id="map">
@@ -124,11 +124,8 @@
   <!-- Footer Section -->
   <footer>
     <div class="footer-content">
-      <p>&copy; 2025 Bulb Onions Nairobi. All rights reserved.</p>
-      <ul>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Terms of Service</a></li>
-      </ul>
+      <small><p>&copy; 2025 Bulb Onions Nairobi.</p></small>
+      <small><p>All rights reserved.</p></small>
     </div>
   </footer>
 
