--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Premium Bulb Onions from Nairobi, Kenya. Check out our onion catalogue and place your order!">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/duotone-light.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/duotone-regular.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/duotone-thin.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-light.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-regular.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-solid.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-thin.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-light.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-regular.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-solid.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-thin.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+
+
   <title>Bulb Onions Store</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -15,16 +30,29 @@
       <img src="./assets/logobg.png" alt="Bulb Onions Logo">
       <h2>Nkace Onions</h2>
     </div>
-    <nav>
-      <ul id="menu">
+
+    <nav class="header-nav">
+      <div class="menu-bars-container">
+          <i class="fa-sharp fa-solid fa-bars bars-open" style="color: inherit;"></i>
+          <i class="fa-solid fa-xmark bars-closed hidden" style="color: inherit;"></i>
+      </div>
+
+      <ul class="menu-list" id="menu">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#catalogue">Catalogue</a></li>
         <li><a href="#offers">Offers</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-      <div id="menu-icon">&#9776;</div> <!-- Burger icon for mobile menu -->
-    </nav>
+
+      <ul class="full-menu hidden">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#catalogue">Catalogue</a></li>
+        <li><a href="#offers">Offers</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+  </nav>
   </header>
 
   <!-- Hero Section -->
