enhanced the gallery grid

--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
     <p>If you are a farmer, contact us today to get the best market prices for your onions. We value your hard work and provide reliable partnerships.</p>
     
     <div class="buying-images-grid">
-      <article class="card wide"><img src="./assets/loading.jpeg" alt="Buying from farm 1" ></article>
-      <article class="card big"><img src="./assets/drip.jpeg" alt="Buying from farm 2" ></article>
-      <article class="card wide"><img src="./assets/Ndare.jpeg" alt="Buying from farm 3"></article>
-      <!-- <article class="card big"><img src="./assets/stacks.jpeg" alt="Buying from farm 4"></article> -->
-      <article class="card wide"><img src="./assets/hand.jpeg" alt="Buying from farm 4"></article>
+      <article class="card big"><img src="./assets/loading.jpeg" alt="Buying from farm 1" ></article>
+      <article class="card wide"><img src="./assets/drip.jpeg" alt="Buying from farm 2" ></article>
+      <article class="card"><img src="./assets/Ndare.jpeg" alt="Buying from farm 3"></article>
+      <article class="card big"><img src="./assets/stacks.jpeg" alt="Buying from farm 4"></article>
+      <article class="card tall"><img src="./assets/hand.jpeg" alt="Buying from farm 4"></article>
       <article class="card wide"><img src="./assets/mua.jpeg" alt="Buying from farm 4"></article>
-      <!-- <article class="card tall"><img src="./assets/kilo.jpeg" alt="Buying from farm 4"></article> -->
-      <!-- <article class="card wide"><img src="./assets/bunch.jpeg" alt="Buying from farm 4"></article> -->
+      <article class="card tall"><img src="./assets/kilo.jpeg" alt="Buying from farm 4"></article>
+      <article class="card "><img src="./assets/bunch.jpeg" alt="Buying from farm 4"></article>
     </div>
   </section>
 
