resized the feedback container

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </section>
 
   <!-- Customer Feedback Section -->
-  <section id="customer-feedback" class="feedback container">
+  <section id="customer-feedback" class="feedback-container">
     <h2>What Our Customers Say</h2>
     <div class="feedback-grid">
       
