--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-thin.css">
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 
+  <!-- favicon link-->
+   <link rel="icon" type="image/png" href="./assets/favicon_io/favicontransparent.png" >
+  <!-- favicon link-->
 
-  <title>Bulb Onions Store</title>
+  <title>Nkace Onions Store</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
