resized the from far grid gallery

--- a/index.html
+++ b/index.html
@@ -93,14 +93,15 @@
     <p>If you are a farmer, contact us today to get the best market prices for your onions. We value your hard work and provide reliable partnerships.</p>
     
     <div class="buying-images-grid">
-      <article class="card big"><img src="./assets/loading.jpeg" alt="Buying from farm 1" ></article>
-      <article class="card wide"><img src="./assets/drip.jpeg" alt="Buying from farm 2" ></article>
-      <article class="card"><img src="./assets/Ndare.jpeg" alt="Buying from farm 3"></article>
-      <article class="card big"><img src="./assets/stacks.jpeg" alt="Buying from farm 4"></article>
-      <article class="card tall"><img src="./assets/hand.jpeg" alt="Buying from farm 4"></article>
-      <article class="card wide"><img src="./assets/mua.jpeg" alt="Buying from farm 4"></article>
-      <article class="card tall"><img src="./assets/kilo.jpeg" alt="Buying from farm 4"></article>
-      <article class="card "><img src="./assets/bunch.jpeg" alt="Buying from farm 4"></article>
+      <article class="card big loading"><img src="./assets/loading.jpeg" alt="Buying from farm 1" ></article>
+      <article class="card wide drip"><img src="./assets/drip.jpeg" alt="Buying from farm 2" ></article>
+      <article class="card Ndare"><img src="./assets/Ndare.jpeg" alt="Buying from farm 3"></article>
+      <article class="card big stacks"><img src="./assets/stacks.jpeg" alt="Buying from farm 4"></article>
+      <article class="card tall hand"><img src="./assets/hand.jpeg" alt="Buying from farm 4"></article>
+      <article class="card wide mua hidden"><img src="./assets/mua.jpeg" alt="Buying from farm 4"></article>
+      <article class="card tall kilo"><img src="./assets/kilo.jpeg" alt="Buying from farm 4"></article>
+      <article class="card bunch hidden"><img src="./assets/bunch.jpeg" alt="Buying from farm 4"></article>
+      <article class="card ugnd "><img src="./assets/ugandan.jpeg" alt="Buying from uganda"></article>
     </div>
   </section>
 
