resized the from far grid gallery

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="feedback-grid">
       
       <div class="image-1 contact-img">
-          <img src="./assets/retail.jpeg"  />
+          <img src="./assets/shelfonion.jpeg"  />
       </div>
 
       <div class="feedback-card card-1">
