resized site for medium screen sized devices

--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
       <p>Email: info@nkaceonions.co.ke</p>
       <p>Location: Nairobi, Kenya</p>
     </div>
-    <div id="map">
+    <div id="map" class="map">
       <!-- Embed Google Maps iframe here -->
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d474.62943873010727!2d36.83166406686815!3d-1.287956046004159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f11258edbf3a5%3A0xc37e5f6e20a4af52!2sWakulima%20Market%20Nairobi!5e1!3m2!1sen!2ske!4v1736954396849!5m2!1sen!2ske" 
               width="400" 
-              height="300" 
+              height="300"
               style="border:0;" 
               allowfullscreen="" 
               loading="lazy" 
