updated the welcome section
Added some call to action in the welcome section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
   <header>
     <div class="logo">
       <img src="./assets/logobg.png" alt="Bulb Onions Logo">
-      <h2>Nkace Onions</h2>
+      <div class="logo-title">
+        <h2>Nkace Onions</h2>
+        <p>Kitunguu chako, ladha yako</p>
+      </div>
     </div>
 
     <nav class="header-nav">
@@ -71,8 +74,9 @@
   <section id="welcome" class="welcome container">
     <h2>Why Buy from Us?</h2>
     <p>At Nkace Onions, we pride ourselves on providing high-quality onions directly
-        from the farm to you at discounted prices.
-        Our commitment to excellence ensures you get the best products and customer service.
+      from the farm to you at discounted prices.
+      Our commitment to excellence ensures you get the best products with exceptional taste
+      as we ensure customer satisfaction at each purchase.
     </p>
   </section>
 
