resized site for medium screen sized devices

--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
   <!-- Welcome Section -->
   <section id="welcome" class="welcome container">
     <h2>Why Buy from Us?</h2>
-    <p>At Nkace Onions, we pride ourselves on providing high-quality onions directly
-      from the farm to you at discounted prices.
-      Our commitment to excellence ensures you get the best products with exceptional taste
-      as we ensure customer satisfaction at each purchase.
+    <p>
+      At Nkace Onions, we take pride in delivering high-quality 
+      onions directly from the farm to your doorstep at discounted prices. 
+      Our dedication to excellence ensures that you receive the best-tasting 
+      onions while enjoying outstanding customer service. 
+      Your satisfaction is our priority with every purchase.
     </p>
   </section>
 
