--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#catalogue">Catalogue</a></li>
-        <li><a href="#offers">Offers</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
 
@@ -55,7 +54,6 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#catalogue">Catalogue</a></li>
-        <li><a href="#offers">Offers</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
   </nav>
@@ -71,7 +69,7 @@
   </section>
 
   <!-- Welcome Section -->
-  <section id="welcome" class="welcome container">
+  <section id="about" id="welcome" class="welcome container">
     <h2>Why Buy from Us?</h2>
     <p>
       At Nkace Onions, we take pride in delivering high-quality 
