resized site for medium screen sized devices

--- a/index.html
+++ b/index.html
@@ -68,6 +68,31 @@
     </div>
   </section>
 
+  <section class="onion-types-banner">
+    <div class="onion-banner-container">
+      <ul class="onion-list">
+        <li>Red Bella F1</li>
+        <li>Cornet F1</li>
+        <li>Africa Red</li>
+        <li>Red Coach</li>
+        <li>Malbec</li>
+        <li>Neptune</li>
+        <li>Rucet</li>
+        <li>Sivan</li>
+        <li>Red Hallen</li>
+        <li>Red Bella F1</li>
+        <li>Cornet F1</li>
+        <li>Africa Red</li>
+        <li>Red Coach</li>
+        <li>Malbec</li>
+        <li>Neptune</li>
+        <li>Rucet</li>
+        <li>Sivan</li>
+        <li>Red Hallen</li>
+      </ul>
+    </div>
+  </section>
+
   <!-- Welcome Section -->
   <section id="about" id="welcome" class="welcome container">
     <h2>Why Buy from Us?</h2>
