created the animation card

--- a/index.html
+++ b/index.html
@@ -70,26 +70,44 @@
 
   <section class="onion-types-banner">
     <div class="onion-banner-container">
-      <ul class="onion-list">
-        <li>Red Bella F1</li>
-        <li>Cornet F1</li>
-        <li>Africa Red</li>
-        <li>Red Coach</li>
-        <li>Malbec</li>
-        <li>Neptune</li>
-        <li>Rucet</li>
-        <li>Sivan</li>
-        <li>Red Hallen</li>
-        <li>Red Bella F1</li>
-        <li>Cornet F1</li>
-        <li>Africa Red</li>
-        <li>Red Coach</li>
-        <li>Malbec</li>
-        <li>Neptune</li>
-        <li>Rucet</li>
-        <li>Sivan</li>
-        <li>Red Hallen</li>
+      <div class="notebook-page">
+        <div class="clips">
+          <div class="clip"></div>
+          <div class="clip"></div>
+          <div class="clip"></div>
+          <div class="clip"></div>
+          <div class="clip"></div>
+          <div class="clip"></div>
+          <div class="clip"></div>
+          <div class="clip"></div>
+          <div class="clip hidden"></div><!-- hidden -->
+          <div class="clip hidden"></div>
+          <div class="clip hidden"></div>
+          <div class="clip hidden"></div>
+          <div class="clip hidden"></div>
+        </div>
+        <div class="notebook-page-white-space"></div> 
+        <ul class="onion-list">
+          <li class="font-engine">Red-Bella-F1</li>
+          <li class="font-dream">Cornet-F1</li>
+          <li class="font-neo">Africa-Red</li>
+          <li class="font-price">Red-Coach</li>
+          <li class="font-engine-italic">Malbec</li>
+          <li class="font-dream-bold">Neptune</li>
+          <li class="font-dream-italic">Rucet</li>
+          <li class="font-dream-bold-italic">Sivan</li>
+          <li class="font-engine">Red-Hallen</li>
+          <li class="font-engine">Red-Bella-F1</li>
+          <li class="font-dream">Cornet-F1</li>
+          <li class="font-neo">Africa-Red</li>
+          <li class="font-price">Red-Coach</li>
+          <li class="font-engine-italic">Malbec</li>
+          <li class="font-dream-bold">Neptune</li>
+          <li class="font-dream-italic">Rucet</li>
+          <li class="font-dream-bold-italic">Sivan</li>
+          <li class="font-engine">Red-Hallen</li>
       </ul>
+      </div>
     </div>
   </section>
 
