--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
           <div class="clip hidden"></div>
           <div class="clip hidden"></div>
           <div class="clip hidden"></div>
+          <div class="clip hidden"></div>
+          <div class="clip hidden"></div>
+          <div class="clip hidden"></div>
+          <div class="clip hidden"></div>
+          <div class="clip hidden"></div>
+          <div class="clip hidden-lg"></div>
+          <div class="clip hidden-lg"></div>
+          <div class="clip hidden-lg"></div>
+          <div class="clip hidden-lg"></div>
+          <div class="clip hidden-lg"></div>
+          <div class="clip hidden-lg"></div>
+          <div class="clip hidden-lg"></div>
+          <div class="clip hidden-lg"></div>
+          <div class="clip hidden-lg"></div>
+          <div class="clip hidden-lg"></div>
+          <div class="clip hidden-lg"></div>
         </div>
         <div class="notebook-page-white-space"></div> 
         <ul class="onion-list">
